# leethack

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start-backend.sh  test-docker-vm.sh
.github/: copilot-instructions.md
agent/python/: main.py
agent/python/llm/: llm_handler.py
agent/python/sub_agents/: sub_agent_handler.py
agent/python/tools/: tool_handler.py
agent/python/websearch/: websearch_handler.py
agent/python/zep/: zep_handler.py
backend/services/user-service/: package-lock.json  package.json
leethack-backend-rust/: Cargo.toml  Dockerfile.firecracker  README.md  setup.sh
leethack-backend-rust/src/: api.rs  config.rs  docker_vm.rs  lib.rs  main.rs
leethack-frontend/: package-lock.json  package.json  tailwind.config.ts
leethack-frontend/src/app/: globals.css  layout.tsx  page.tsx
leethack-frontend/src/app/challenges/: page.tsx
leethack-frontend/src/app/challenges/sqlinjection/: page.tsx
leethack-frontend/src/app/profile/: page.tsx
leethack-frontend/src/components/: EnhancedTerminal.tsx  Heatmap.tsx  Navbar.tsx  ProfileStats.tsx  Terminal.tsx
leethack-frontend/src/data/: mockData.ts
leethack-frontend/src/lib/: utils.ts
leethack-frontend/src/types/: index.ts
services/user-service/: package.json  test-vm.js  tsconfig.json
services/user-service/src/: index.ts  vm-manager.ts
