[package]
name = "leethack-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "leethack_backend"
path = "src/lib.rs"

[[bin]]
name = "leethack-backend-server"
path = "src/main.rs"

[dependencies]
# Web framework and async runtime
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebSocket for real-time communication
futures = "0.3"
tokio-tungstenite = "0.20"

# Database and storage - comment out for now
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# HTTP client for Firecracker API
reqwest = { version = "0.11", features = ["json"] }

# Docker API client for VM management
bollard = "0.14"

# Concurrent data structures
dashmap = "5.0"

# Byte manipulation
bytes = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Process management - comment out for now
# tokio-process = "0.2"

# System calls - comment out for now
# libc = "0.2"

# File system operations
tempfile = "3.0"

[dev-dependencies]
tokio-test = "0.4"
